--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.26.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -18,6 +19,7 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "typescript": "5.2.2"
   }
 }
