--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@types/styled-components": "^5.1.29",
     "autoprefixer": "10.4.14",
     "eslint": "^8.2.0",
     "eslint-config-next": "13.3.0",
@@ -20,6 +21,8 @@
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-smart-flexbox": "^0.0.7",
+    "styled-components": "^6.1.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
