--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -5,7 +5,7 @@
     "airbnb-typescript"
   ],
   "parserOptions": {
-    "project": "./client/tsconfig.json"
+    "project": "./tsconfig.json"
   },
   "rules": {
     "@typescript-eslint/no-unused-vars": [
