Move all files, fix header

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -28,7 +28,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".eslintrc.json",
+    ".eslintrc.js",
     "tailwind.config.js",
     "next.config.js"
   ],
