--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,10 @@
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-smart-flexbox": "^0.0.7",
     "styled-components": "^6.1.0",
-    "react-icons": "^4.11.0",
+    "swr": "^2.2.4",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
